--- a/ClientApp/src/styles/SignInPage.scss
+++ b/ClientApp/src/styles/SignInPage.scss
@@ -51,6 +51,7 @@ label {
   font-family: 'Quicksand';
   background-color: $purple-color;
   text-decoration: none;
+  border: none;
   &:hover {
     background-color: $orange-color;
     color: white;
