--- a/ClientApp/src/styles/SignInPage.scss
+++ b/ClientApp/src/styles/SignInPage.scss
@@ -39,7 +39,7 @@ label {
   text-decoration: none;
 }
 
-.enterButton {
+.submitButton {
   display: flex;
   justify-content: center;
   margin-top: 3rem;
