User reload works and populates information on profile page

--- a/ClientApp/src/styles/SignUpPage.scss
+++ b/ClientApp/src/styles/SignUpPage.scss
@@ -43,6 +43,9 @@ label {
     background-color: $purple-color;
     color: white;
   }
+  &:focus {
+    outline-color: $purple-color;
+  }
 }
 
 .signUpButton {
