--- a/ClientApp/src/styles/SignInPage.scss
+++ b/ClientApp/src/styles/SignInPage.scss
@@ -56,6 +56,9 @@ label {
     background-color: $orange-color;
     color: white;
   }
+  &:focus {
+    outline-color: $orange-color;
+  }
 }
 
 .signInButton {
