--- a/ClientApp/src/styles/QuestionnairePage.scss
+++ b/ClientApp/src/styles/QuestionnairePage.scss
@@ -1,5 +1,13 @@
 @import './_variables.scss';
 
+.directions {
+  margin-top: 5rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  font-size: 1.5rem;
+  color: $grey-color;
+}
+
 .question {
   margin-left: 2rem;
   margin-right: 2rem;
