--- a/ClientApp/src/styles/SignInPage.scss
+++ b/ClientApp/src/styles/SignInPage.scss
@@ -74,3 +74,35 @@ label {
     color: white;
   }
 }
+
+//Media Queries
+
+@media only screen and (min-width: 650px) {
+  .signIn {
+    display: flex;
+    flex-direction: column;
+  }
+
+  input {
+    justify-content: center;
+    align-items: center;
+    margin-right: 2rem;
+    margin-left: 2rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .signIn {
+    display: flex;
+    flex-direction: column;
+  }
+
+  input {
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+
+  label {
+    padding-left: 8rem;
+  }
+}
