--- a/ClientApp/src/styles/SignUpPage.scss
+++ b/ClientApp/src/styles/SignUpPage.scss
@@ -63,13 +63,9 @@ label {
   .signUp {
     display: flex;
     flex-direction: column;
-  }
-
-  input {
-    justify-content: center;
-    align-items: center;
-    margin-right: 2rem;
-    margin-left: 2rem;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -77,14 +73,8 @@ label {
   .signUp {
     display: flex;
     flex-direction: column;
-  }
-
-  .signUpInput {
-    margin-left: 12rem;
-    margin-right: 12rem;
-  }
-
-  label {
-    padding-left: 10rem;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
