all functionality works

--- a/ClientApp/src/styles/Footer.scss
+++ b/ClientApp/src/styles/Footer.scss
@@ -18,6 +18,10 @@
 footer {
   text-align: center;
   color: $grey-color;
-  margin-top: 2rem;
+  margin-top: 3rem;
   margin-bottom: 2rem;
+}
+
+.footerName {
+  color: $purple-color;
 }
